# atbmtt

./: .gitignore  Makefile  README.md  create_notebook.py  demo_notebook.ipynb  eda_notebook.ipynb  live_demo.py  pyproject.toml  run_demo.py
docs/: 10_CAU_HOI_DEMO_ATTT.md  CO_SO_LY_THUYET_DE_TAI.md  HOC_MAY_CHO_NGUOI_MOI.md  KICH_BAN_DEMO.md  KIEN_THUC_COT_LOI_HE_THONG.md
outputs/: BAO_CAO_DEMO.md
src/: evaluate.py  generate_data.py  preprocess.py  train_models.py  visualize_data.py
